--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 vignettes/*.html
 vignettes/*.pdf
 
+/data_raw/
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
@@ -31,3 +33,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
